--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@mui/material": "^6.1.6",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "copa_america": "file:",
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "framer-motion": "^11.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
